--- a/Blog.html
+++ b/Blog.html
@@ -19,7 +19,7 @@
                      Header  Section
 
     ---------------------------------------->
-    <header class="container ">
+    <header class="container">
         <div class="col1 logo">
             <a href="index.html">
                 <img src="img/mylogosilver.png" alt="logo">
@@ -41,7 +41,16 @@
                     <li><a href="#">EN</a></li>
                 </ul>
             </div>
+            <div class="responsive-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="Blog.html">Blog</a></li>
 
+                    <li><a class="active" href="Contact.html">Contact</a></li>
+
+                </ul>
+            </div>
         </nav>
     </header>
     <!--------------------------------------
