--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=yes, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact</title>
 
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/clearfix.css">
