--- a/Blog.html
+++ b/Blog.html
@@ -56,7 +56,7 @@
             <p>jafar alshishani</p>
         </div>
        <div class="col2">
-           <h2>this is how it work</h2>
+           <h2>My First Blg Article</h2>
            <p>
                Tofu gluten-free four loko austin 3 wolf moon. Knausgaard XOXO asymmetrical vice. Blue bottle selfies crucifix, banjo ugh art party offal seitan forage listicle normcore pitchfork hammock beard hell of. Mlkshk polaroid deep v, sartorial etsy quinoa pabst. Green juice flexitarian edison bulb wolf. Pinterest shabby chic health goth brooklyn drinking vinegar listicle deep v, activated charcoal keytar scenester quinoa brunch. Yuccie shabby chic 90's, cred cornhole art party kogi distillery selvage tbh letterpress pabst neutra fam tumblr.
            </p><br/><p>
